Primary button used for options in display (just PushToStart atm)

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 #------------------------------------------------
 
@@ -183,8 +183,8 @@ build_flags =
   -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
-  ; -D PRINT_DISP_STATE=1
-  ; -D PRINT_DISP_STATE_EVENT=1
+  -D PRINT_DISP_STATE=1
+  -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_MUTEX_TAKE_FAIL=1
 
   ; -D USE_STATS_TASK
