Got digital haptic working.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-default_envs = esp32dev.debug
-; default_envs = esp32dev.release
+; default_envs = esp32dev.debug
+default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 #------------------------------------------------
 
@@ -113,9 +113,12 @@ build_flags =
   -D SOFTSPI
 
   -D PRIMARY_BUTTON_PIN=27
+  -D HAPTIC_DIGITAL_PIN=33
   -D USE_ANALOG_TRIGGER
   ; -D USE_I2C_ANALOG_TRIGGER
-  ; -D USE_HAPTIC_TASK
+  -D USE_HAPTIC_TASK
+  ; -D USE_HAPTIC_I2C
+  -D USE_HAPTIC_DIGITAL
   -D USE_TDISPLAY
   -D USE_DIGITALPRIMARYBUTTON_TASK
 
