Everything seems to be working OK

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 [platformio]
-; default_envs = esp32dev.debug
-default_envs = esp32dev.release
+default_envs = esp32dev.debug
+; default_envs = esp32dev.release
 # default_envs = WioTerminal.debug
 #------------------------------------------------
 
@@ -93,10 +93,10 @@ build_flags =
   -D ACCEL_DIRECTION=DIR_PULL_TO_ACCEL
   ; analog
   -D THROTTLE_PIN=32
-  -D THROTTLE_RAW_MAX=3900
+  -D THROTTLE_RAW_MAX=3330
   -D THROTTLE_RAW_CENTRE=2286
-  -D THROTTLE_RAW_MIN=730
-  -D THROTTLE_RAW_DEADBAND=200
+  -D THROTTLE_RAW_MIN=100
+  -D THROTTLE_RAW_DEADBAND=100
   ; i2c analog
   -D THROTTLE_I2C_RAW_MAX=15040
   -D THROTTLE_I2C_RAW_CENTRE=2169
@@ -190,15 +190,16 @@ build_flags =
   -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_MUTEX_TAKE_FAIL=1
 
-  ; -D USE_STATS_TASK
+  -D USE_STATS_TASK
   -D USE_REMOTE_TASK
 
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
-  -D FEATURE_CRUISE_CONTROL=1
+  -D FEATURE_CRUISE_CONTROL=0
   -D FEATURE_PUSH_TO_START=1
   -D FEATURE_USE_DEADMAN=1
   -D SEND_TO_BOARD_INTERVAL=200
+  ; -D SEND_TO_BOARD_INTERVAL=500
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
