--- a/platformio.ini
+++ b/platformio.ini
@@ -52,7 +52,7 @@ lib_deps =
 
   https://github.com/skelstar/arduino-fsm.git#v2.3
   https://github.com/skelstar/NRF24L01.Library.git
-  https://github.com/skelstar/Esk8-Shared.git#latest
+  https://github.com/skelstar/Esk8-Shared.git
   https://github.com/skelstar/TFT_eSPI.git#Esk8.Board.Server
 
   https://github.com/skelstar/Seeed_Arduino_AS5600.git
@@ -91,11 +91,18 @@ build_flags =
 build_flags =
   -D REMOTE_USED=PURPLE_REMOTE
   -D ACCEL_DIRECTION=DIR_PULL_TO_ACCEL
+  ; analog
   -D THROTTLE_PIN=32
-  -D THROTTLE_RAW_MAX=4058
-  -D THROTTLE_RAW_CENTRE=2169
-  -D THROTTLE_RAW_MIN=730
+  -D THROTTLE_RAW_MAX=3330
+  -D THROTTLE_RAW_CENTRE=2286
+  -D THROTTLE_RAW_MIN=100
   -D THROTTLE_RAW_DEADBAND=100
+  ; i2c analog
+  -D THROTTLE_I2C_RAW_MAX=15040
+  -D THROTTLE_I2C_RAW_CENTRE=2169
+  -D THROTTLE_I2C_RAW_MIN=1264
+  -D THROTTLE_I2C_RAW_DEADBAND=200
+
   -D BATTERY_MEASURE_PIN=34
 
   -D SOFT_SPI_MOSI_PIN=13 # Blue
@@ -105,9 +112,13 @@ build_flags =
   -D NRF_CS=2
   -D SOFTSPI
 
-  -D PRIMARY_BUTTON_PIN=0
+  -D PRIMARY_BUTTON_PIN=27
+  -D HAPTIC_DIGITAL_PIN=33
   -D USE_ANALOG_TRIGGER
+  ; -D USE_I2C_ANALOG_TRIGGER
   -D USE_HAPTIC_TASK
+  ; -D USE_HAPTIC_I2C
+  -D USE_HAPTIC_DIGITAL
   -D USE_TDISPLAY
   -D USE_DIGITALPRIMARYBUTTON_TASK
 
@@ -172,21 +183,24 @@ build_flags =
   -D PRINT_COMMS_STATE_EVENT=1
 
   -D PRINT_NRF24L01_DETAILS=1
-  -D PRINT_THROTTLE=1
+  ; -D PRINT_THROTTLE=1
   -D PRINT_BUTTON_EVENTS=1
   -D PRINT_RESET_DETECTION=1
+  ; display
   ; -D PRINT_DISP_STATE=1
   ; -D PRINT_DISP_STATE_EVENT=1
   ; -D PRINT_MUTEX_TAKE_FAIL=1
 
-  ; -D USE_STATS_TASK
+  -D USE_STATS_TASK
   -D USE_REMOTE_TASK
 
   -D FEATURE_LED_COUNT=4 ; number of LEDs (0 when commented out)
 
-  -D FEATURE_CRUISE_CONTROL=1
-  ; -D FEATURE_PUSH_TO_START=1
+  -D FEATURE_CRUISE_CONTROL=0
+  -D FEATURE_PUSH_TO_START=1
+  -D FEATURE_USE_DEADMAN=1
   -D SEND_TO_BOARD_INTERVAL=200
+  ; -D SEND_TO_BOARD_INTERVAL=500
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
 
@@ -219,8 +233,9 @@ build_flags =
 
   -D USE_REMOTE_TASK
 
-  -D FEATURE_CRUISE_CONTROL=1
-  ; -D FEATURE_PUSH_TO_START=1
+  -D FEATURE_USE_DEADMAN=1
+  -D FEATURE_CRUISE_CONTROL=false
+  -D FEATURE_PUSH_TO_START=1
   -D SEND_TO_BOARD_INTERVAL=200
     ; how often we store moving time data in memory
   -D STORE_SNAPSHOT_INTERVAL=5000
@@ -272,7 +287,7 @@ build_flags =
   ; -D PRINT_RX_FROM_BOARD=1
   
   -D FEATURE_CRUISE_CONTROL=true
-  -D FEATURE_PUSH_TO_START=true
+  -D FEATURE_PUSH_TO_START=false
   -D SEND_TO_BOARD_INTERVAL=500
   -D LONGCLICK_MS=1000
     ; how often we store moving time data in memory
